Se sube versión 1.8 sin cambios en lenguaje y app_constants

--- a/assets/language/ar.json
+++ b/assets/language/ar.json
@@ -433,5 +433,46 @@
   "select_store_cover_photo": "حدد صورة غلاف المتجر",
   "set_store_location": "حدد موقع المتجر",
   "delivery_charge_per_km": "رسوم التوصيل لكل كيلومتر",
-  "enter_delivery_charge_per_km": "أدخل رسوم التوصيل لكل كيلومتر"
+  "enter_delivery_charge_per_km": "أدخل رسوم التوصيل لكل كيلومتر",
+
+  "store_owner": "صاحب متجر",
+  "store_employee": "موظف المتجر",
+  "you_have_no_permission_to_access_this_feature": "ليس لديك إذن للوصول إلى هذه الميزة",
+  "paper_size": "حجم الورق",
+  "80_mm": "80 ملم",
+  "58_mm": "58 ملم",
+  "print_invoice": "فاتورة طباعة",
+  "ip_address": "عنوان IP",
+  "port": "مشى إلى اليسار",
+  "scheduled_order_time:": "وقت الطلب المحدد:",
+  "payment_method:": "طريقة الدفع او السداد",
+  "item_info:": "معلومات العنصر",
+  "qty:": "الكمية",
+  "price:": "السعر",
+
+  "variation": "تفاوت",
+  "add_variation": "أضف الاختلاف",
+  "single": "غير مرتبطة",
+  "multiple": "مضاعف",
+  "select_type": "اختر صنف",
+  "option_name": "اسم الخيار",
+  "additional_price": "سعر إضافي",
+  "add_new_option": "إضافة خيار جديد",
+  "required": "مطلوب",
+  "name": "اسم",
+  "add_new_variation": "أضف صيغة جديدة",
+  "enter_name_for_every_variation": "أدخل اسمًا لكل اختلاف",
+  "enter_min_max_for_every_multipart_variation": "أدخل min-max لكل شكل متعدد الأجزاء",
+  "enter_option_name_for_every_variation": "أدخل اسم الخيار لكل شكل",
+  "enter_option_price_for_every_variation": "أدخل سعر الخيار لكل اختلاف",
+  "minimum_type_cant_be_less_then_0": "لا يمكن أن يكون الحد الأدنى للنوع أقل من 0",
+  "max_type_cant_be_less_then_minimum_type": "لا يمكن أن يكون الحد الأقصى للنوع أقل من الحد الأدنى للنوع",
+  "max_type_length_should_not_be_more_then_options_length": "يجب ألا يكون الحد الأقصى لطول الكتابة أكبر من طول الخيارات",
+  "multiple_select": "تحديد متعدد",
+  "single_select": "اختيار واحد",
+  "optional": "اختياري",
+  "set_value_for_all_variation": "قم بتعيين القيمة لجميع التنوعات",
+  "you_cant_withdraw_more_then_1000000": "لا يمكنك سحب أكثر من 9،99،999",
+  "access_denied": "للوصول إلى هذه الميزة ، تحتاج إلى إعداد متجري ومتجري لكل من إذن الوحدة.",
+  "thank_you": "اشكرك"
 }
