--- a/assets/language/en.json
+++ b/assets/language/en.json
@@ -39,7 +39,7 @@
   "picked_up": "Delivery Item Is On The Way",
   "delivered": "Delivered",
   "refund_requested": "Refund Requested",
-  "refunded": "Returned",
+  "refunded": "Refunded",
   "returned": "Returned",
   "failed": "Payment Failed",
   "canceled": "Cancelled",
@@ -433,5 +433,46 @@
   "select_store_cover_photo": "Select store cover photo",
   "set_store_location": "Select store location",
   "delivery_charge_per_km": "Delivery Charge Per km",
-  "enter_delivery_charge_per_km": "Enter Delivery Charge Per km"
+  "enter_delivery_charge_per_km": "Enter Delivery Charge Per km",
+
+  "store_owner": "Store Owner",
+  "store_employee": "Store Employee",
+  "you_have_no_permission_to_access_this_feature": "You have no permission to access this feature.",
+  "paper_size": "Paper Size",
+  "80_mm": "80 mm",
+  "58_mm": "58 mm",
+  "print_invoice": "Print Invoice",
+  "ip_address": "IP Address",
+  "port": "Port",
+  "scheduled_order_time:": "Scheduled order time:",
+  "payment_method": "Payment Method",
+  "item_info": "Item Info",
+  "qty": "Qty",
+  "price:": "Price",
+
+  "variation": "Variation",
+  "add_variation": "Add Variation",
+  "single": "Single",
+  "multiple": "Multiple",
+  "select_type": "Select Type",
+  "option_name": "Option Name",
+  "additional_price": "Additional Price",
+  "add_new_option": "Add new Option",
+  "required": "Required",
+  "name": "Name",
+  "add_new_variation": "Add New Variation",
+  "enter_name_for_every_variation": "Enter name for every variation",
+  "enter_min_max_for_every_multipart_variation": "Enter min-max for every multipart variation",
+  "enter_option_name_for_every_variation": "Enter option name for every variation",
+  "enter_option_price_for_every_variation": "Enter option price for every variation",
+  "minimum_type_cant_be_less_then_1": "Minimum type can't be less then 1",
+  "max_type_cant_be_less_then_minimum_type": "Max type can't be less then Minimum type",
+  "max_type_length_should_not_be_more_then_options_length": "Max type length should not be more then options length",
+  "multiple_select": "Multiple Select",
+  "single_select": "Single Select",
+  "optional": "Optional",
+  "set_value_for_all_variation": "Set value for all variation",
+  "you_cant_withdraw_more_then_1000000": "You can't withdraw more then 9,99,999",
+  "access_denied": "For access this feature, you need  'my store' & 'store setup' both module permission.",
+  "thank_you": "Thank You"
 }
