--- a/assets/language/es.json
+++ b/assets/language/es.json
@@ -433,5 +433,46 @@
   "select_store_cover_photo": "Seleccione la foto de portada de la tienda",
   "set_store_location": "Seleccione la ubicación de la tienda",
   "delivery_charge_per_km": "Cargo de entrega por km",
-  "enter_delivery_charge_per_km": "Ingrese el cargo de entrega por km"
+  "enter_delivery_charge_per_km": "Ingrese el cargo de entrega por km",
+  "store_owner": "Dueño de tienda",
+  "store_employee": "Empleado de la tienda",
+  "you_have_no_permission_to_access_this_feature": "No tiene permiso para acceder a esta función.",
+  "paper_size": "Tamaño de papel",
+  "80_mm": "80 mm",
+  "58_mm": "58 mm",
+  "print_invoice": "Imprimir factura",
+  "ip_address": "Dirección IP",
+  "port": "Puerto",
+  "scheduled_order_time:": "Tiempo de pedido programado:",
+  "payment_method:": "Método de pago",
+  "item_info": "Información del artículo",
+  "qty": "Cuestión",
+  "price:": "Precio",
+  "variation": "Variación",
+  "add_variation": "Agregar variación",
+  "single": "Único",
+  "multiple": "Múltiple",
+  "select_type": "Seleccione tipo",
+  "option_name": "Nombre de opción",
+  "additional_price": "Precio adicional",
+  "add_new_option": "Agregar nueva opción",
+  "required": "Requerido",
+  "name": "Nombre",
+  "add_new_variation": "Agregar nueva variación",
+  "enter_name_for_every_variation": "Ingrese el nombre para cada variación",
+  "enter_min_max_for_every_multipart_variation": "Ingrese min-max para cada variación multipart",
+  "enter_option_name_for_every_variation": "Ingrese el nombre de la opción para cada variación",
+  "enter_option_price_for_every_variation": "Ingrese el precio de la opción para cada variación",
+  "minimum_type_cant_be_less_then_1": "El tipo mínimo no puede ser menos de 1",
+  "max_type_cant_be_less_then_minimum_type": "El tipo máximo no puede ser menos de tipo mínimo",
+  "max_type_length_should_not_be_more_then_options_length": "La longitud del tipo máximo no debe ser más de lo que la longitud de las opciones",
+  "multiple_select": "Seleccionar múltiples",
+  "single_select": "Seleccione único",
+  "optional": "Opcional",
+  "set_value_for_all_variation": "Establecer valor para todas las variaciones",
+  "you_cant_withdraw_more_then_1000000": "No puede retirar más de 9,99,999",
+  "access_denied": "Para acceder a esta función, necesita 'mi tienda' y 'configuración de la tienda' ambos permiso del módulo.",
+  "update_order_amount": "Actualizar monto del pedido",
+  "update_discount_amount": "Actualizar cantidad de descuento",
+  "discount_amount": "Importe de descuento"
 }
