Nueva Versión 2.1 Sucursal sin idioma

--- a/assets/language/ar.json
+++ b/assets/language/ar.json
@@ -477,5 +477,50 @@
   "thank_you": "اشكرك",
   "update_order_amount": "تحديث مبلغ الطلب",
   "update_discount_amount": "تحديث مبلغ الخصم",
-  "discount_amount": "مقدار الخصم"
+  "discount_amount": "مقدار الخصم",
+  "select_cancellation_reasons": "حدد أسباب الإلغاء",
+  "you_did_not_select_any_reason": "أنت لم تحدد أي سبب",
+  "coupon": "كوبون",
+  "are_you_sure_to_delete": "هل انت متأكد من الحذف",
+  "you_want_to_delete_this_coupon": "تريد حذف هذه القسيمة",
+  "code": "رمز",
+  "total_users": "إجمالي المستخدمين",
+  "valid_until": "صالح حتى",
+  "update_coupon": "تحديث القسيمة",
+  "add_coupon": "أضف عرض",
+  "title": "لقب",
+  "coupon_type": "نوع القسيمة",
+  "default": "تقصير",
+  "limit_for_same_user": "حد لنفس المستخدم",
+  "min_purchase": "الحد الأدنى للشراء",
+  "start_date": "تاريخ البدء",
+  "expire_date": "تاريخ انتهاء الصلاحية",
+  "max_discount": "ماكس الخصم",
+  "please_fill_up_your_coupon_title": "يرجى ملء عنوان القسيمة الخاصة بك",
+  "please_fill_up_your_coupon_code": "يرجى ملء رمز القسيمة الخاص بك",
+  "please_select_your_coupon_start_date": "الرجاء تحديد تاريخ بدء القسيمة الخاصة بك",
+  "please_select_your_coupon_expire_date": "الرجاء تحديد تاريخ انتهاء صلاحية القسيمة الخاصة بك",
+  "please_fill_up_your_coupon_discount": "يرجى ملء كوبون الخصم الخاص بك",
+  "limit_for_same_user_cant_be_more_then_100": "لا يمكن أن يكون الحد الأقصى للمستخدم نفسه أكثر من 100",
+  "expense_report": "تقرير المصاريف",
+  "search_with_order_id": "البحث مع معرف الطلب",
+  "your_search_box_is_empty": "مربع البحث الخاص بك فارغ",
+  "from": "من",
+  "to": "ل",
+  "no_expense_found": "لا توجد مصاريف",
+  "expense_type": "نوع المصاريف",
+  "no_coupon_found": "لم يتم العثور على قسيمة",
+  "update_now": "تحديث الان",
+  "your_app_is_deprecated": "تم إيقاف تطبيقك",
+  "recommended": "موصى به",
+  "discount_on_product": "خصم على المنتج",
+  "food_status_updated_successfully": "تم تحديث حالة الطعام بنجاح",
+  "maximum_delivery_charge": "رسوم التوصيل القصوى",
+  "minimum_charge_can_not_be_more_then_maximum_charge": "لا يمكن أن يكون الحد الأدنى للرسوم أكثر من الحد الأقصى",
+  "minimum_delivery_charge": "الحد الأدنى لرسوم التوصيل",
+  "total_user": "إجمالي المستخدم",
+  "limit": "حد",
+  "tax_included": "شامل الضريبة",
+  "no_reasons_available": "لا توجد أسباب متاحة",
+  "rejected": "مرفوض"
 }
