--- a/assets/language/en.json
+++ b/assets/language/en.json
@@ -477,5 +477,50 @@
   "thank_you": "Thank You",
   "update_order_amount": "Update Order Amount",
   "update_discount_amount": "Update Discount Amount",
-  "discount_amount": "Discount Amount"
+  "discount_amount": "Discount Amount",
+  "select_cancellation_reasons": "Select Cancellation Reasons",
+  "you_did_not_select_any_reason": "You did not select any reason",
+  "coupon": "Coupon",
+  "are_you_sure_to_delete": "Are you sure to delete",
+  "you_want_to_delete_this_coupon": "You want to delete this coupon",
+  "code": "Code",
+  "total_users": "Total users",
+  "valid_until": "Valid until",
+  "update_coupon": "Update Coupon",
+  "add_coupon": "Add Coupon",
+  "title": "Title",
+  "coupon_type": "Coupon type",
+  "default": "Default",
+  "limit_for_same_user": "Limit for same user",
+  "min_purchase": "Min Purchase",
+  "start_date": "Start Date",
+  "expire_date": "Expire Date",
+  "max_discount": "Max Discount",
+  "please_fill_up_your_coupon_title": "Please fill up your coupon title",
+  "please_fill_up_your_coupon_code": "Please fill up your coupon code",
+  "please_select_your_coupon_start_date": "Please select your coupon start date",
+  "please_select_your_coupon_expire_date": "Please select your coupon expire date",
+  "please_fill_up_your_coupon_discount": "Please fill up your coupon discount",
+  "limit_for_same_user_cant_be_more_then_100": "Limit for same user cant be more then 100",
+  "expense_report": "Expense Report",
+  "search_with_order_id": "Search with order id",
+  "your_search_box_is_empty": "Your search box is empty",
+  "from": "From",
+  "to": "To",
+  "no_expense_found": "No Expense Found",
+  "expense_type": "Expense Type",
+  "no_coupon_found": "No coupon found",
+  "update_now": "Update Now",
+  "your_app_is_deprecated": "Your app is deprecated",
+  "recommended": "Recommended",
+  "discount_on_product": "Discount on product",
+  "food_status_updated_successfully": "Food status updated successfully",
+  "maximum_delivery_charge": "Maximum delivery charge",
+  "minimum_charge_can_not_be_more_then_maximum_charge": "Minimum charge can not be more then maximum charge",
+  "minimum_delivery_charge": "Minimum delivery charge",
+  "total_user": "Total User",
+  "limit": "Limit",
+  "tax_included": "Tax Included",
+  "no_reasons_available": "No reasons available",
+  "rejected": "Rejected"
 }
