--- a/assets/language/es.json
+++ b/assets/language/es.json
@@ -474,5 +474,50 @@
   "access_denied": "Para acceder a esta función, necesita 'mi tienda' y 'configuración de la tienda' ambos permiso del módulo.",
   "update_order_amount": "Actualizar monto del pedido",
   "update_discount_amount": "Actualizar cantidad de descuento",
-  "discount_amount": "Importe de descuento"
+  "discount_amount": "Importe de descuento",
+  "select_cancellation_reasons": "Seleccionar motivos de cancelación",
+  "you_did_not_select_any_reason": "No seleccionó ninguna razón",
+  "coupon": "Cupón",
+  "are_you_sure_to_delete": "¿Estás seguro de eliminar",
+  "you_want_to_delete_this_coupon": "Quieres eliminar este cupón",
+  "code": "código",
+  "total_users": "Usuarios totales",
+  "valid_until": "Válido hasta",
+  "update_coupon": "Actualizar cupón",
+  "add_coupon": "Agregar cupón",
+  "title": "título",
+  "coupon_type": "Tipo de cupón",
+  "default": "defecto",
+  "limit_for_same_user": "Límite para el mismo usuario",
+  "min_purchase": "Compra mínima",
+  "start_date": "Fecha de inicio",
+  "expire_date": "Fecha de caducidad",
+  "max_discount": "Descuento máximo",
+  "please_fill_up_your_coupon_title": "Complete el título de su cupón",
+  "please_fill_up_your_coupon_code": "Por favor complete su código de cupón",
+  "please_select_your_coupon_start_date": "Seleccione la fecha de inicio de su cupón",
+  "please_select_your_coupon_expire_date": "Seleccione la fecha de caducidad de su cupón",
+  "please_fill_up_your_coupon_discount": "Por favor complete su cupón de descuento",
+  "limit_for_same_user_cant_be_more_then_100": "El límite para el mismo usuario no puede ser más de 100",
+  "expense_report": "Informe de gastos",
+  "search_with_order_id": "Buscar con ID de pedido",
+  "your_search_box_is_empty": "Su cuadro de búsqueda está vacío",
+  "from": "De",
+  "to": "A",
+  "no_expense_found": "Ningún gasto encontrado",
+  "expense_type": "Tipo de gastoe",
+  "no_coupon_found": "No se encontró ningún cupón",
+  "update_now": "Actualizar ahora",
+  "your_app_is_deprecated": "Tu aplicación está obsoleta",
+  "recommended": "recomendado",
+  "discount_on_product": "descuento en producto",
+  "food_status_updated_successfully": "Estado de los alimentos actualizado con éxito",
+  "maximum_delivery_charge": "Cargo máximo de envío",
+  "minimum_charge_can_not_be_more_then_maximum_charge": "El cargo mínimo no puede ser mayor que el cargo máximo",
+  "minimum_delivery_charge": "Cargo mínimo de envío",
+  "total_user": "Usuario total",
+  "limit": "Límite",
+  "tax_included": "Impuesto incluido",
+  "no_reasons_available": "No hay razones disponibles",
+  "rejected": "Rechazada"
 }
